force-app/main/default/objects/Configuration_Locker_Type__c/Configuration_Locker_Type__c.object-meta.xml
<CustomObject>
    <label>Configuration Locker Type</label>
    <nameField>
        <displayFormat>CONF_LT_{0000}</displayFormat>
        <label>Nom de Configuration Locker Type</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurations Locker Type</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>