force-app/main/default/objects/Configuration_Locker_Type__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>Configuration__c</referenceTo>
    <relationshipLabel>Configurations Locker Type</relationshipLabel>
    <relationshipName>Configurations_Locker_Type</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>