force-app/main/default/objects/Configuration_Locker_Type__c/fields/Type_de_casier__c.field-meta.xml
<CustomField>
    <fullName>Type_de_casier__c</fullName>
    <label>Type de casier</label>
    <referenceTo>Type_de_casier__c</referenceTo>
    <relationshipLabel>Configurations Locker Type</relationshipLabel>
    <relationshipName>Configurations_Locker_Type</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>